# slice

./: CHANGES  COPYING  ChangeLog  HEADER.html  INSTALL  LICENSE  Makefile.in  README  TODO  aclocal.m4  configure  configure.in  slice.1  slice.pod  slice_boot.pl  slice_boot.pl.in  slice_main.pl  slice_pass1.pl  slice_pass2.pl  slice_pass3.pl  slice_set.pl  slice_setup.pl  slice_term.pl  slice_term.y  slice_util.pl  slice_vers.pl
etc/: crunch  crunch.in  expand  expand.in  newvers
lib/: 00README  Makefile.in
lib/bitvector/: MANIFEST
lib/getoptlong/: Long.pm  MANIFEST  Makefile.PL
lib/io/: MANIFEST  Makefile.PL
lib/setintegerfast/: IntegerFast.pm  IntegerFast.xs  IntegerRange.pm  Makefile  Makefile.PL  lib_defs.h  lib_set.c  lib_set.h  typemap
t/: Makefile  Makefile.in  file.html.de.OK  file.html.en  file.in
