dnl ##
dnl ##  configure.in -- GNU autoconf configuration source
dnl ##

AC_PREREQ(2.0)dnl
AC_REVISION($Revision: 1.0$)dnl

AC_INIT(README)
AC_CONFIG_AUX_DIR(etc)
AC_PREFIX_DEFAULT(/usr/local)

AC_SET_MAKE
AC_PROG_INSTALL

test "x$prefix" = xNONE && prefix=$ac_default_prefix
eval "dir=$prefix"
case $dir in
    *slice* ) ;;
	      * ) libdir="$libdir/slice" ;;
esac
AC_SUBST(libsubdir)

AC_CHECK_PERL_INTERPRETER
AC_CHECK_PERL_MM_PATHS
AC_ARG_WITH(closedworld,dnl
[  --with-closedworld      force the private install of all Perl modules],[
have_getoptlong=0
have_bitvector=0
have_io=0
],)dnl
AC_CHECK_PERL_MODULE(Getopt::Long, 2.12, getoptlong)
AC_CHECK_PERL_MODULE(Bit::Vector, 5.0, bitvector)
AC_CHECK_PERL_MODULE(IO::File, 1.07, io)

AC_OUTPUT(dnl
Makefile dnl
t/Makefile dnl
lib/Makefile dnl
slice_boot.pl dnl
etc/expand dnl
,dnl
chmod a+x etc/expand
)dnl

dnl ##EOF##
